# claude-team

./: .gitignore  README.md  pyproject.toml
claude_team/: __init__.py  checkpoint.py  cli.py  cluster.py  config.py  discovery.py  dlm.py  local_ipc.py  manifest.py  mcp_server.py  nats_client.py  node.py  overlay.py  project_root.py  watcher.py
docs/: architecture.md  operator.md  protocol.md
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
tests/: test_checkpoint.py  test_cluster.py  test_config.py  test_discovery.py  test_dlm_logic.py  test_integration_nats.py  test_local_ipc.py  test_manifest.py  test_overlay_logic.py  test_project_root.py  test_watcher.py
